# stdalias

./: LICENSE  README.md  meson.build
doc/: stdalias.texi  unstdalias.texi
include/: stdalias.h  unstdalias.h
man/: stdalias.3  unstdalias.3
